force-app/main/default/objects/Event__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>End Date and Time</description>
    <inlineHelpText>End Date and Time</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>