force-app/main/default/objects/Event__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is event live or not</description>
    <inlineHelpText>Is event live or not</inlineHelpText>
    <label>Live</label>
    <type>Checkbox</type>
</CustomField>