force-app/main/default/objects/Event__c/fields/Max_Seats__c.field-meta.xml
<CustomField>
    <fullName>Max_Seats__c</fullName>
    <description>Maximum seats available</description>
    <inlineHelpText>Maximum seats available</inlineHelpText>
    <label>Max Seats</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>