force-app/main/default/objects/Event__c/fields/Recurring__c.field-meta.xml
<CustomField>
    <fullName>Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is event recurring or not</description>
    <inlineHelpText>Is event recurring or not</inlineHelpText>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>