force-app/main/default/objects/Event__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>Start Date and Time</description>
    <inlineHelpText>Start Date and Time</inlineHelpText>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>