force-app/main/default/objects/Event__c/validationRules/Ensure_EndDate_Ahead_Of_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_EndDate_Ahead_Of_StartDate</fullName>
    <active>true</active>
    <description>Ensures End Date/Time is at least one day ahead of Start Date/Time</description>
    <errorConditionFormula>NOT(ISBLANK( End_Date_Time__c )) &amp;&amp; End_Date_Time__c &lt;= ( Start_Date_Time__c  + 1)</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>End Date/Time must be at least one day ahead of Start Date/Time</errorMessage>
</ValidationRule>